# GPU_Programming

./: README.md  pyproject.toml
mandybrot_gpu/: sample.py
scripts/: kernel.cl  run.py  run2.py
